# meson_experiments

01_hello_world_cpp_library/: meson.build
01_hello_world_cpp_library/include/: hello_world.hpp
01_hello_world_cpp_library/src_bin/: say-hello.cpp
01_hello_world_cpp_library/src_lib/: say_hello.cpp
02_hello_world_pybind11_module/: meson.build  pybind11_example.cpp  pyproject.toml
03_three_level_python_module/: meson.build  pyproject.toml
03_three_level_python_module/include/: add_three.hpp  three_level.hpp
03_three_level_python_module/src_bin/: test-add-three.cpp
03_three_level_python_module/src_lib/: add_three.cpp  three_level.cpp  three_level_pybind11.cpp
03_three_level_python_module/src_pyext/: three_level_pyext.cpp
03_three_level_python_module/src_python/three_level/: __init__.py  add_one.py
04_three_level_python_descendant/: meson.build  pyproject.toml
04_three_level_python_descendant/include/: three_level_descendant.hpp
04_three_level_python_descendant/src_bin/: test-descendant.cpp
04_three_level_python_descendant/src_lib/: three_level_descendant.cpp  three_level_descendant_pybind11.cpp
04_three_level_python_descendant/src_pyext/: three_level_descendant_pyext.cpp
04_three_level_python_descendant/src_python/three_level_descendant/: __init__.py
05_ctypes_python_module/: meson.build  pyproject.toml
05_ctypes_python_module/include/: example_ctypes_module.hpp
05_ctypes_python_module/src_lib/: example_ctypes_module.cpp
05_ctypes_python_module/src_python/ctypes_example/: __init__.py  _ctypes_wrappers.py
